--- a/humpsub-website/index.html
+++ b/humpsub-website/index.html
@@ -24,7 +24,8 @@
     <link href='http://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,800,700,900' rel='stylesheet' type='text/css'>
 
     <!-- AngularJS -->
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+    <!-- <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script> -->
+    <script src="js/angularjs.js"></script>
     <script src="js/angular.js"></script>
 
     <!-- jQuery -->
@@ -73,20 +74,9 @@
         </ul>
     </nav>
 
-    <!-- <div class="dotstyle dotstyle-scaleup">
-		<h2>Scale up</h2>
-		<ul>
-			<li class="current"><a href="#">Home</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Products</a></li>
-			<li><a href="#">Portfolio</a></li>
-			<li><a href="#">Blog</a></li>
-			<li><a href="#">Contact</a></li>
-		</ul>
-	</div> -->
 
     <!-- Header -->
-    <header id="top" class="header full">
+    <header id="top" class="header">
         <div class="text-vertical-center">
             <h2 class="standout-text-dark" style="font-weight:500">Mechanical Engineering</h2>
             <h3 class="standout-text-dark" style="font-weight:500">University of Washington</h3>
@@ -98,7 +88,7 @@
     </header>
 
     <!-- About -->
-    <section id="about" class="about full">
+    <section id="about" class="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -132,7 +122,7 @@
 
     <!-- Services -->
     <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
-    <section id="services" class="services bg-primary full" style="font-family:Raleway; padding-top:30px; ">
+    <section id="services" class="services bg-primary" style="font-family:Raleway; padding-top:30px; ">
         <div class="container">
             <div class="row text-center" style:"margin:0px">
                 <div class="col-lg-10 col-lg-offset-1">
@@ -226,7 +216,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h3>Help our Team Achieve New Heights!</h3>
-                    <a href="" class="btn btn-lg btn-light" ng-click="showSponsorPitch()">Sponsor Us!</a>
+                    <a href="#sponsor" class="btn btn-lg btn-light" ng-click="showSponsorPitch()">Sponsor Us!</a>
                     <a href="https://www.washington.edu/giving/make-a-gift/?page=funds&source_typ=2&source=EDZ" class="btn btn-lg btn-dark">Donate!</a>
                     <a href="#sponsor" class="btn btn-lg btn-light" ng-click="showMailingList()">Follow Us!</a>
                 </div>
