--- a/humpsub-website/index.html
+++ b/humpsub-website/index.html
@@ -92,7 +92,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h1 style="font-family:Raleway; font-size:6vh; margin:0px;">Who are we?</h1>
+                    <h1 style="font-family:Raleway; font-size:50px; margin:0px;">Who are we?</h1>
                         <!-- <p class="lead">We are engineers. We are designers. <br> We are machinists, coders, athletes, and divers.<br> </p> -->
                         <div id="spacer" style="height: 5.0vh;"></div>
                         <p class="lead">We are a community of driven students from across the University of Washington <br> who believe that everyone is capable of impactful and original work.<br> </p>
@@ -102,7 +102,7 @@
 
                         <div id="spacer" style="height: 5.0vh;"></div>
 
-                        <p class="lead" style="font-size: 4.8vh;">Welcome, to UW Human Powered Sub.</p>
+                        <p class="lead" style="font-size: 35px;">Welcome, to UW Human Powered Sub.</p>
                         <img src="img/hps-logo.jpg" style="height: auto; width: 128px;">
 
                         <div id="spacer" style="height: 1.0vh;"></div>
@@ -191,7 +191,7 @@
             <div id="spacer" style="height: 10px;"></div>
 
             <div style="margin-left:20px; margin-top: 20px; position:absolute;">
-                <a href="#portfolio" id="about-next-button" style="margin-left:45vw; margin-top: 10vh; position:absolute;">
+                <a href="#portfolio" id="about-next-button" style="margin-left:45vw; margin-top: 15vh; position:absolute;">
                     <i class="fa fa-angle-down fa-5x" style="color:#ffffff; opacity:0.9"></i>
                 </a>
             </div>
