--- a/humpsub-website/index.html
+++ b/humpsub-website/index.html
@@ -92,7 +92,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h1 style="font-family:Raleway; font-size:38px; margin:0px;">Who are we?</h1>
+                    <h1 style="font-family:Raleway; font-size:50px; margin:0px;">Who are we?</h1>
                         <!-- <p class="lead">We are engineers. We are designers. <br> We are machinists, coders, athletes, and divers.<br> </p> -->
                         <div id="spacer" style="height: 5.0vh;"></div>
                         <p class="lead">We are a community of driven students from across the University of Washington <br> who believe that everyone is capable of impactful and original work.<br> </p>
@@ -100,13 +100,12 @@
                         <div id="spacer" style="height: 2.0vh;"></div>
                         <p class="lead">Every year, we come together to share our passion with others,<br>and build the fastest human powered submarine in the world.</p>
 
-                        <div id="spacer" style="height: 5.0vh;"></div>
+                        <div id="spacer" style="height: 1.5vh;"></div>
 
                         <p class="lead" style="font-size: 35px;">Welcome, to UW Human Powered Sub.</p>
                         <img src="img/hps-logo.jpg" style="height: auto; width: 128px;">
 
-                        <div id="spacer" style="height: 1.0vh;"></div>
-                        <!-- <div id="spacer" style="height: 30px;"></div> -->
+                        <div id="spacer" style="height:5px;"></div>
 
                         <a href="#services" id="about-next-button"><i class="fa fa-angle-down fa-5x" style="color:#333;"></i></a>
                         <!-- <div id="spacer" style="height: 30px;"></div> -->
@@ -173,7 +172,7 @@
     </div>
 
     <!-- roster -->
-    <div id="team-roster" class="callout" style="height: 55vh;">
+    <div id="team-roster" class="callout" style="height: 55vh; position:relative;">
         <p class="btn btn-dark btn-lg" style="margin-left:20px; margin-top: 20px; position:absolute;"
         ng-show="is_showing_members" ng-click="reset()">Back</p>
         <div class="text-vertical-center" style="text-align: center; padding-top:20px; ">
@@ -190,12 +189,12 @@
             </ul>
             <div id="spacer" style="height: 10px;"></div>
 
-            <div style="margin-left:20px; margin-top: 20px; position:absolute;">
-                <a href="#portfolio" id="about-next-button" style="margin-left:45vw; margin-top: 15vh; position:absolute;">
-                    <i class="fa fa-angle-down fa-5x" style="color:#ffffff; opacity:0.9"></i>
-                </a>
-            </div>
+
         </div>
+<!-- 
+        <a href="#portfolio" id="about-next-button" style="position: absolute; bottom: 0;">
+            <i class="fa fa-angle-down fa-5x" style="color:#ffffff; opacity:0.9"></i>
+        </a> -->
     </div>
 
     <!-- Portfolio -->
