Fix side menu with gallery, remove contact. Fix Kyleah LinkedIn, grammar

--- a/humpsub-website/index.html
+++ b/humpsub-website/index.html
@@ -66,11 +66,14 @@
                 <a href="#team-roster" onclick=$("#menu-close").click();>Team Roster</a>
             </li>
             <li>
-                <a href="#portfolio" onclick=$("#menu-close").click();>History</a>
+                <a href="#portfolio" onclick=$("#menu-close").click();>Photo Gallery</a>
             </li>
             <li>
-                <a href="#contact" onclick=$("#menu-close").click();>Contact</a>
+                <a href="#sponsor" onclick=$("#menu-close").click();>Sponsors</a>
             </li>
+            <!--<li>
+                <a href="#contact" onclick=$("#menu-close").click();>Contact</a>
+            </li>-->
         </ul>
     </nav>
 
